--- a/addbus.html
+++ b/addbus.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,74 +10,252 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
 
-  <!-- CSS -->
+  <!---------CSS ----------->
   <link rel="stylesheet" href="place_order.css">
 
-  <style>
-    /* Your CSS styles here */
 
+  <style>
+    #clock {
+      text-align: center;
+      font-family: "Oswald", sans-serif;
+      font-weight: 300;
+      font-size: 1.5rem;
+      padding-top: 5vh;
+      display: flex;
+      justify-content: flex-start;
+      align-items: start;
+      background-color: #ffffff;
+      height: 2vh;
+      ;
+    }
+
+    .form-container {
+      padding: 20px;
+      border-radius: 50px;
+      margin: 0 auto;
+      width: fit-content;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9);
+      margin-top: 2rem;
+      height: 65rem;
+    }
+
+    .form-container>div {
+      width: calc(50% - 10px);
+    }
+
+    .form-container>form {}
+
+    .left-align {
+      text-align: left;
+    }
+
+    .right-align {
+      text-align: right;
+    }
+
+
+
+    form {
+
+      width: 60rem;
+      padding-left: 0;
+    }
+
+    select,
+    input[type="text"],
+    input[type="date"],
+    textarea {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 13px;
+      box-sizing: border-box;
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+
+    input[type="radio"] {
+      margin-right: 5px;
+      /* make radio button large */
+      transform: scale(1.5);
+    }
+
+    input[type="submit"] {
+      background-color: #2a972e;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #2a972e;
+    }
+
+    .view-order-details {
+
+      padding: 20px;
+    }
+
+    .view-order-details h3 {
+      padding: 20px;
+    }
+
+    .btn-submit {
+
+      /* get this button to center inside form tag */
+      margin-left: 25rem;
+
+    }
+
+    h2 {
+      text-align: center;
+      margin-top: 0;
+      font-family: Georgia, Arial, Helvetica;
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: #333;
+    }
+
+    form>.color-code {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      font-weight: bold;
+    }
   </style>
+
 
 </head>
 
 <body>
 
-  <div class="container">
-    <aside>
-      <div class="top">
-        <div class="logo">
-          <img src="./images/Logo.png">
-          <h2>Fashion<span class="danger"></span>Treak</h2>
-        </div>
-      </div>
-      <div class="sidebar">
-        <a href="dashboard.php">
-          <span class="material-icons-sharp">grid_view</span>
-          <h3>Dashboard</h3>
-        </a>
-        <a href="./place_an_order.php">
-          <span class="material-icons-sharp">person_outline</span>
-          <h3>Place Order</h3>
-        </a>
-        <a href="./update_details.php">
-          <span class="material-icons-sharp">receipt_long</span>
-          <h3>Update Details</h3>
-        </a>
-        <a href="#">
-          <span class="material-icons-sharp">insights</span>
-          <h3>Review Us</h3>
-        </a>
-        <a href="../Landing/login.php">
-          <span class="material-icons-sharp">logout</span>
-          <h3>logout</h3>
-        </a>
-      </div>
-    </aside>
-    <!-- END OF ASIDE -->
 
+
+  <div class="container">
+
+    <!-------------right side part enter here when html done---------->
+    <!---------------- END OF ASIDE---------------->
     <main>
-      <h2 class="form-heading">Place your order here</h2>
+
+      <h2 class="form-heading">Add your bus here</h2>
+
       <div class="form-container">
         <div class="left-align">
           <form method="POST">
-            <label for="order-type">Select Order Type:</label>
+
+
+            <label for="order-type">Add bus Type:</label>
             <select id="order-type" name="order-type" required>
               <option value=""></option>
-              <option value="standard">Standard</option>
-              <option value="express">Express</option>
-              <option value="custom">Custom</option>
+              <option value="standard">Luxury</option>
+              <option value="express">Super Luxury</option>
+              <option value="custom">Standard</option>
             </select>
-            <!-- Rest of your form HTML here -->
+
+            <br><br>
+
+            <label for="material-type" required>Select Material Type:</label>
+            <select id="material-type" name="material-type-1">
+              <option value=""></option>
+              <option value="cotton">Cotton</option>
+              <option value="silk">Silk</option>
+              <option value="polyester">Polyester</option>
+              <option value="wool">Wool</option>
+            </select>
+
+            <label for="material-type">Select Material Type:</label>
+            <select id="material-type" name="material-type-2" required>
+              <option value=""></option>
+              <option value="cotton">Cotton</option>
+              <option value="silk">Silk</option>
+              <option value="polyester">Polyester</option>
+              <option value="wool">Wool</option>
+            </select>
+
+            <label for="material-type">Select Material Type:</label>
+            <select id="material-type" name="material-type-3">
+              <option value=""></option>
+              <option value="cotton">Cotton</option>
+              <option value="silk">Silk</option>
+              <option value="polyester">Polyester</option>
+              <option value="wool">Wool</option>
+            </select>
+
+            <br><br>
+
+            <span class="color-code">
+              <label for="color-code" required>Color Code 1:</label>
+              <input type="color" id="color-code-1" name="color-code-1">
+
+              <br><br>
+
+              <label for="color-code">Color Code 2:</label>
+              <input type="color" id="color-code" name="color-code-2">
+
+              <br><br>
+
+              <label for="color-code">Color Code 3:</label>
+              <input type="color" id="color-code" name="color-code-3">
+            </span>
+            <br><br>
+
+
+            <br><br>
+
+            <label for="embroidered">Embroidered:</label>
+            <input style="margin:10px" type="radio" id="embroidered-yes" name="embroidered" value="yes">
+            <label for="embroidered-yes">Yes</label>
+            <input style="margin:10px" type="radio" id="embroidered-no" name="embroidered" value="no">
+            <label for="embroidered-no">No</label>
+
+            <br>
+            <br>
+
+            <label for="collar">Collar:</label>
+            <select id="collar" name="collar" required>
+              <option value=""></option>
+              <option value="round">Round</option>
+              <option value="v-neck">V-neck</option>
+              <option value="polo">Polo</option>
+              <option value="button-down">Button-down</option>
+            </select>
+
+            <label for="qty">Quantity</label>
+            <input type="text" name="quantity" required>
+
+            <label for="order-deadline">Order Deadline:</label>
+            <input type="date" id="order-deadline" name="order-deadline" required>
+
+            <br><br>
+
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" rows="4" cols="50"></textarea>
+            <br><br>
             <input type="submit" value="Place Order" class="btn-submit">
           </form>
         </div>
       </div>
 
+
+
+
+
+
       <div class="view-order-details">
-        <h3><a href="./display_order.php"><span class="material-icons-sharp">arrow_back</span>View Previous orders</a></h3>
+
+        <h3> <a href="./display_order.php"> <span class="material-icons-sharp">arrow_back</span>View Previous orders</a>
+        </h3>
+
       </div>
+
     </main>
-    <!-- END OF MAIN -->
+    <!-------------------------------------- END OF MAIN---------------------------------------->
 
     <div class="right">
       <div class="top">
@@ -89,25 +268,35 @@
         </div>
         <div class="profile">
           <div class="info">
-            <p>Hey, <b></b></p>
-            <small class="text-muted"></small>
+            <p>Hey, <b>
+              </b></p>
+            <small class="text-muted">
+            </small>
           </div>
-          <div class="profile-photo"></div>
+          <div class="profile-photo">
+          </div>
         </div>
       </div>
-      <!-- END OF RIGHT TOP -->
-      <!-- If something needed for the right side, add it here -->
+      <!---------END OF RIGHT TOP---------->
+
+      <!-- !if somthing needed for right side add here -->
     </div>
-    <!-- If something needed for the right side, add it here -->
+
+    <!-- !if somthing needed for right side add here -->
+  </div>
+
   </div>
 
   <script src="script.js"></script>
   <script>
+    //create function name dark
     function lightmode() {
+      //remove class active
       document.querySelector('.light').classList.add('active');
       document.querySelector('.dark').classList.remove('active');
     }
     function darkmode() {
+      //remove class active
       document.querySelector('.dark').classList.add('active');
       document.querySelector('.light').classList.remove('active');
     }
