--- a/addbus.html
+++ b/addbus.html
@@ -139,12 +139,11 @@
 
   <div class="container">
 
-    <!-------------right side part enter here when html done---------->
+    <!-------------right side part enter here when html done(use form abvove container)---------->
     <!---------------- END OF ASIDE---------------->
     <main>
 
       <h2 class="form-heading">Add your bus here</h2>
-
       <div class="form-container">
         <div class="left-align">
           <form method="POST">
@@ -152,10 +151,10 @@
 
             <label for="order-type">Add bus Type:</label>
             <select id="order-type" name="order-type" required>
-              <option value=""></option>
-              <option value="standard">Luxury</option>
-              <option value="express">Super Luxury</option>
-              <option value="custom">Standard</option>
+              <option value="None">None</option>
+              <option value="Luxury">Luxury</option>
+              <option value="Super Luxury">Super Luxury</option>
+              <option value="Standard">Standard</option>
             </select>
 
             <br><br>
